# flight-tracker-pro-public

./: .env.example  .gitignore  LICENSE  README.md  build.sh  clean.sh  dev.sh  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build-all.yml  build-macos.yml  build-windows.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 2025-11-28_identity_fusion.sql
src-tauri/resources/: flight_log.csv  model_costs.csv
src-tauri/src/: agent_memory.rs  agent_server.rs  agent_tracking.rs  calculations.rs  commands_old.rs  database.rs  deepseek.rs  doc_ingestion.rs  doc_worker.rs  gemini.rs  geo.rs  grok.rs  investigation.rs  lib.rs  main.rs  models.rs  ocr.rs  ocr_learning.rs  pdf_dossier.rs  schema.sql
src-tauri/src/commands/: active_defense.rs  agent_memory_commands.rs  ai_models.rs  aircraft.rs  airport_enrichment.rs  airports.rs  analytics.rs  batch_calculations.rs  calculations.rs  csv_import.rs  custom_schema_commands.rs  data_editor.rs  data_management.rs  doc_ingestion_commands.rs  documents.rs  donation.rs  ffp.rs  flights.rs  fuel_commands.rs  fuel_prices.rs  identity_fusion.rs  investigations.rs  journeys.rs  media_gallery.rs  mod.rs  network_scanner.rs  network_sentinel.rs  network_tools.rs  ocr.rs  passengers.rs  pilot_logbook.rs  research.rs  self_improvement.rs  settings.rs  statistics.rs  users.rs  workflow.rs
src-tauri/src/extract/: aggregator.rs  identity_fusion.rs  mod.rs  splitter.rs  vision_agent.rs
src-tauri/src/workflow/: ai_generator.rs  checkpoint.rs  executor.rs  mod.rs  models.rs
src/lib/: theme.ts  workflow-commands.ts
src/lib/components/: AgentChat.svelte  AgentTracker.svelte  AircraftTypes.svelte  AirportEnrichment.svelte  AirportInfoSidebar.svelte  AirportList.svelte  Airports.svelte  Analytics.svelte  BatchOCRUploader.svelte  BulkInvestigation.svelte  CarbonFootprint.svelte  CommandCentre.svelte  CsvImportPreview.svelte  DataEditor.svelte  DatasetSelector.svelte  Documents.svelte  DonateModal.svelte  FlightDetail.svelte  FlightMap.svelte  FlightResearch.svelte  FrequentFlyerPrograms.svelte  FuelTracker.svelte  GrokResearch.svelte  Insights.svelte  InvestigationPanel.svelte  Journeys.svelte  (+14 more)
src/routes/: +layout.svelte  +page.svelte
(+32 files in other folders)
